@@ -57,7 +57,7 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
   public static boolean ENABLE_FRAME_TOOLBARS = false;
   private boolean isWithToolBars = false;
 
-  private static Integer versionedVisualsSavable = new Integer(4);
+  private static Integer versionedVisualsSavable = Integer.valueOf(4);
 
   private static final boolean ENABLE_LOOK_AND_FEEL_CHANGE_ACTIONS = false;
   public static boolean ENABLE_MENU_CUSTOMIZATION_ACTION = true;
@@ -251,13 +251,13 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
           extendedState = (Integer) getExtendedState.invoke(JActionFrame.this, null);
         }
         if (maxB != null) {
-          maxBoth = new Integer(maxB.getInt(JActionFrame.this));
+          maxBoth = Integer.valueOf(maxB.getInt(JActionFrame.this));
         }
         if (maxH != null) {
-          maxHoriz = new Integer(maxH.getInt(JActionFrame.this));
+          maxHoriz = Integer.valueOf(maxH.getInt(JActionFrame.this));
         }
         if (maxV != null) {
-          maxVert = new Integer(maxV.getInt(JActionFrame.this));
+          maxVert = Integer.valueOf(maxV.getInt(JActionFrame.this));
         }
       } catch (Throwable t) {
       }
@@ -288,7 +288,7 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
       try {
         setExtendedState = Frame.class.getMethod("setExtendedState", new Class[] { Integer.TYPE });
         if (setExtendedState != null) {
-          setExtendedState.invoke(JActionFrame.this, new Object[] { new Integer(xState) });
+          setExtendedState.invoke(JActionFrame.this, new Object[] { Integer.valueOf(xState) });
         }
       } catch (Throwable t) {
       }
@@ -416,7 +416,7 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
     public CustomizeToolsAction(int actionId) {
       super(com.CH_gui.lang.Lang.rb.getString("action_Customize_Toolbar_..."), Images.get(ImageNums.TOOLS16));
       putValue(Actions.TOOL_TIP, com.CH_gui.lang.Lang.rb.getString("actionTip_Customize_Toolbar"));
-      putValue(Actions.ACTION_ID, new Integer(actionId));
+      putValue(Actions.ACTION_ID, Integer.valueOf(actionId));
       putValue(Actions.TOOL_ICON, Images.get(ImageNums.TOOLS24));
       putValue(Actions.IN_TOOLBAR, Boolean.FALSE);
     }
@@ -502,7 +502,7 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
     public CustomizeMenuAction(int actionId) {
       super(com.CH_gui.lang.Lang.rb.getString("action_Customize_Menus_..."), Images.get(ImageNums.TOOLS16));
       putValue(Actions.TOOL_TIP, com.CH_gui.lang.Lang.rb.getString("actionTip_Customize_Menu_Bar"));
-      putValue(Actions.ACTION_ID, new Integer(actionId));
+      putValue(Actions.ACTION_ID, Integer.valueOf(actionId));
       putValue(Actions.TOOL_ICON, Images.get(ImageNums.TOOLS24));
     }
     public void actionPerformedTraced(ActionEvent event) {
@@ -515,7 +515,7 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
     public ToolTipsAction(int actionId) {
       super(com.CH_gui.lang.Lang.rb.getString("action_Display_Tool_Tips"));
       putValue(Actions.TOOL_TIP, com.CH_gui.lang.Lang.rb.getString("actionTip_Enable/Disable_Tool_Tip_help"));
-      putValue(Actions.ACTION_ID, new Integer(actionId));
+      putValue(Actions.ACTION_ID, Integer.valueOf(actionId));
       putValue(Actions.STATE_CHECK, Boolean.TRUE);
       putValue(Actions.IN_TOOLBAR, Boolean.FALSE);
     }
@@ -531,7 +531,7 @@ public abstract class JActionFrame extends JFrame implements ContainerListener, 
       super(look.getName());
       this.lafClassName = look.getClassName();
       putValue(Actions.TOOL_TIP, com.CH_gui.lang.Lang.rb.getString("actionTip_Change_the_application_Look_And_Feel"));
-      putValue(Actions.ACTION_ID, new Integer(actionId));
+      putValue(Actions.ACTION_ID, Integer.valueOf(actionId));
       // set "selected" only if the current L&F is the one specified
       putValue(Actions.SELECTED_RADIO, Boolean.valueOf(UIManager.getLookAndFeel().getName().equals(look.getName())));
       putValue(Actions.BUTTON_GROUP, group);
