@@ -129,9 +129,9 @@ public class TableSorter extends TableMap implements Comparator, TableModelListe
    * @return The index of specified column in the sorting columns vector. 0=primary, -1=not found
    */
   public int getSortingColumnIndex(int column) {
-    int index = getSortingColumns().indexOf(new Integer(column));
+    int index = getSortingColumns().indexOf(Integer.valueOf(column));
     if (index == -1)
-      index = getSortingColumns().indexOf(new Integer(-(column+ColumnHeaderData.DESCENDING_OFFSET)));
+      index = getSortingColumns().indexOf(Integer.valueOf(-(column+ColumnHeaderData.DESCENDING_OFFSET)));
     return index;
   }
 
@@ -280,7 +280,7 @@ public class TableSorter extends TableMap implements Comparator, TableModelListe
         int length = indexes.length;
         Object[] objs = new Object[length];
         for (int i=0; i<length; i++) {
-          objs[i] = new Integer(indexes[i]);
+          objs[i] = Integer.valueOf(indexes[i]);
         }
 
 //        if (model instanceof RecordTableModel) {
@@ -356,7 +356,7 @@ public class TableSorter extends TableMap implements Comparator, TableModelListe
    * If the column is a primary sort column, than invert the sorting direction.
    */
   public void sortByColumn(int column) {
-    sortByColumns(new Integer[] { new Integer(column) });
+    sortByColumns(new Integer[] { Integer.valueOf(column) });
   }
   /**
    * Make direction for all columns uniform, based on first specified column.
@@ -371,7 +371,7 @@ public class TableSorter extends TableMap implements Comparator, TableModelListe
   }
 
   public void sortByColumn(int column, boolean ascending) {
-    sortByColumns(new Integer[] { new Integer(column) }, new Boolean[] { Boolean.valueOf(ascending) });
+    sortByColumns(new Integer[] { Integer.valueOf(column) }, new Boolean[] { Boolean.valueOf(ascending) });
   }
 
   /**
@@ -413,7 +413,7 @@ public class TableSorter extends TableMap implements Comparator, TableModelListe
     }
 
     // insert to the front of ordering sequence;
-    sortingColumns.insertElementAt(new Integer(ascending ? column : (-(column+ColumnHeaderData.DESCENDING_OFFSET))), 0);
+    sortingColumns.insertElementAt(Integer.valueOf(ascending ? column : (-(column+ColumnHeaderData.DESCENDING_OFFSET))), 0);
 
     /*
     // fire before we adjust indexes because selection saving involves using valid indexes!
