@@ -47,7 +47,7 @@ import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.util.Arrays;
 import java.util.Comparator;
-import java.util.Hashtable;
+import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.Vector;
 import javax.swing.*;
@@ -664,8 +664,8 @@ public abstract class RecordTableComponent extends JPanel implements ToolBarProd
           Long myUID = cache.getMyUserId();
           if (myUID != null) {
             if (cache.getFolderRecord(evaluatedFolder.getFolderRecord().folderId) != null) {
-              Hashtable groupIDsHT = cache.getFolderGroupIDsHT(myUID);
-              if (evaluatedFolder.getFolderShareRecord().isOwnedBy(myUID, groupIDsHT)) {
+              Set groupIDsSet = cache.getFolderGroupIDsSet(myUID);
+              if (evaluatedFolder.getFolderShareRecord().isOwnedBy(myUID, groupIDsSet)) {
 
                 ClientMessageAction msgAction = SIL.submitAndFetchReply(new MessageAction(CommandCodes.FLD_Q_GET_FOLDER_SIZE, new Obj_ID_Rq(evaluatedFolder.getFolderShareRecord().shareId)), 60000);
 
@@ -680,7 +680,7 @@ public abstract class RecordTableComponent extends JPanel implements ToolBarProd
                   replyRecived = true;
                   Obj_IDPair_Co data = (Obj_IDPair_Co) msgAction.getMsgDataSet();
                   countObjs = data.objId_1.longValue();
-                  evaluatedFolder.getFolderRecord().objectCount = new Long(countObjs);
+                  evaluatedFolder.getFolderRecord().objectCount = Long.valueOf(countObjs);
                 }
               }
             }
@@ -698,7 +698,7 @@ public abstract class RecordTableComponent extends JPanel implements ToolBarProd
               refresh = true;
 //        } else if (model instanceof FileTableModel) {
 //          // in file folder there may be sub-directories but no files, so refresh if count of files is different - this is possible because all files are fetched at once (no batches)
-//          FileLinkRecord[] links = cache.getFileLinkRecordsOwnerAndType(evaluatedFolder.getFolderRecord().folderId, new Short(Record.RECORD_TYPE_FOLDER));
+//          FileLinkRecord[] links = cache.getFileLinkRecordsOwnerAndType(evaluatedFolder.getFolderRecord().folderId, Short.valueOf(Record.RECORD_TYPE_FOLDER));
 //          if (links != null && links.length != countObjs) {
 //            if (replyRecived)
 //              if (recordTableScrollPane.getTableModel().getFilterNarrowing() == null)
@@ -875,7 +875,7 @@ public abstract class RecordTableComponent extends JPanel implements ToolBarProd
             Arrays.sort(participants, new Comparator() {
               public int compare(Object o1, Object o2) {
                 int rc = 0;
-                rc = new Integer(getSortInstanceValue(o1)).compareTo(new Integer(getSortInstanceValue(o2)));
+                rc = Integer.valueOf(getSortInstanceValue(o1)).compareTo(Integer.valueOf(getSortInstanceValue(o2)));
                 if (rc == 0 && o1 instanceof ContactRecord && o2 instanceof ContactRecord) {
                   rc = -((ContactRecord) o1).status.compareTo(((ContactRecord) o2).status);
                 }
@@ -990,7 +990,7 @@ public abstract class RecordTableComponent extends JPanel implements ToolBarProd
           } else {
             FolderRecord fldRec = new FolderRecord();
             fldRec.folderId = share.ownerUserId;
-            fldRec.folderType = new Short(FolderRecord.GROUP_FOLDER);
+            fldRec.folderType = Short.valueOf(FolderRecord.GROUP_FOLDER);
             participantsV.addElement(fldRec);
           }
         }
