@@ -141,7 +141,7 @@ public class FileTextLexicon extends StreamTextLexicon {
 //        char c3 = '\u03E7';
 //        char c4 = '\227';
 //        char c5 = '\u012B';
-//        int j = SpellingSession.getOption(new Integer(32));
+//        int j = SpellingSession.getOption(Integer.valueOf(32));
 //        if ((j & 0xff) == 162)
 //        {
 //          int k = (j & 0x1f00) >> 8;
@@ -150,7 +150,7 @@ public class FileTextLexicon extends StreamTextLexicon {
 //          Date date1 = (new GregorianCalendar(2000, 0, 1)).getTime();
 //          Date date2 = new Date(date1.getTime() + (long)i1 * 0x5265c00L);
 //          long l3 = System.currentTimeMillis();
-//          long l5 = (long)SpellingSession.getOption(new Integer(16)) * 1000L;
+//          long l5 = (long)SpellingSession.getOption(Integer.valueOf(16)) * 1000L;
 //          int j2 = j & 0x7fffe000;
 //          int k2 = 0;
 //          for (int i3 = 0; i3 < 32; i3++)
@@ -176,7 +176,7 @@ public class FileTextLexicon extends StreamTextLexicon {
 //                System.out.println();
 //              }
 //
-//              SpellingSession.setOption(new Integer(16), new Integer((int)(l3 / 1000L)));
+//              SpellingSession.setOption(Integer.valueOf(16), Integer.valueOf((int)(l3 / 1000L)));
 //            }
 //            throw new Exception();
 //          }
@@ -193,7 +193,7 @@ public class FileTextLexicon extends StreamTextLexicon {
 //              System.out.println();
 //            }
 //
-//            SpellingSession.setOption(new Integer(16), new Integer((int)(l3 / 1000L)));
+//            SpellingSession.setOption(Integer.valueOf(16), Integer.valueOf((int)(l3 / 1000L)));
 //          }
 //        } else
 //        {
